Responsive for mobile

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "openai": "^4.78.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "tailwind-scrollbar-hide": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
