--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "openai": "^4.78.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.1.3",
     "react-scripts": "5.0.1",
     "tailwind-scrollbar-hide": "^2.0.0"
   },
